cmake_minimum_required(VERSION 3.29)
project(JK190270)

set(CMAKE_CXX_STANDARD 23)

add_executable(JK190270 main.cpp
        1050301/1050301bubbleSort.cpp
        1050301/1050301bubbleSort.h
        temp.cpp
        temp.h
        1050301/1050301oddEvenSort.cpp
        1050301/1050301oddEvenSort.h
        1060301/1060301a.cpp
        1060301/1060301a.h
        1060301/1060301b.cpp
        1060301/1060301b.h
        1060301/1060301c.cpp
        1060301/1060301c.h
        1060301/1060301d.cpp
        1060301/1060301d.h
        1060301/1060301e.cpp
        1060301/1060301e.h
        1070201/1070201.cpp
        1070201/1070201.h
        1070202/1070202a.cpp
        1070202/1070202a.h
        1070202/1070202b.cpp
        1070202/1070202b.h
        1070202/1070202c.cpp
        1070202/1070202c.h
        1070202/1070202d.cpp
        1070202/1070202d.h
        1070202/1070202e.cpp
        1070202/1070202e.h
        1080401/1080401a.cpp
        1080401/1080401a.h
        1080401/1080401b.cpp
        1080401/1080401b.h
        1080402/1080402a.cpp
        1080402/1080402a.h
        1080402/1080402b.cpp
        1080402/1080402b.h
        1080402/1080402c.cpp
        1080402/1080402c.h
        1080402/1080402d.cpp
        1080402/1080402d.h
        1090501/1090501a.cpp
        1090501/1090501a.h
        1090502/1090502a.cpp
        1090502/1090502a.h
        1090502/1090502b.cpp
        1090502/1090502b.h
        1090502/1090502c.cpp
        1090502/1090502c.h
        1090502/1090502d.cpp
        1090502/1090502d.h
        1090502/1090502e.cpp
        1090502/1090502e.h
        1110301/1110301a.cpp
        1110301/1110301a.h
        1110301/1110301b.cpp
        1110301/1110301b.h
        1110301/1110301c.cpp
        1110301/1110301c.h
        1110301/1110301d.cpp
        1110301/1110301d.h
        1110301/1110301e.cpp
        1110301/1110301e.h
        1110301/110301f.cpp
        1110301/110301f.h
        1110301/110301g.cpp
        1110301/110301g.h)
