cmake_minimum_required(VERSION 3.29)
project(JK190270)

set(CMAKE_CXX_STANDARD 23)

add_executable(JK190270 main.cpp

        2050301/2050301a.cpp
        2050301/2050301a.h
        2050301/2050301b.cpp
        2050301/2050301b.h
        2050301/2050301c.cpp
        2050301/2050301c.h
        2060301/2060301a.cpp
        2060301/2060301a.h
        2060301/2060301b.cpp
        2060301/2060301b.h
        2060301/2060301c.cpp
        2060301/2060301c.h
        2090101/2090101a.cpp
        2090101/2090101a.h
        2090101/2090101b.cpp
        2090101/2090101b.h
        2090101/2090101c.cpp
        2090101/2090101c.h
        2090101/2090101d.cpp
        2090101/2090101d.h
        2090101/2090101e.cpp
        2090101/2090101e.h
)
